--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -23,6 +23,13 @@ jobs:
         with:
           php-version: '8.0'
           tools: composer
+      - name: Set up Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      # - name: Install dependencies
+      #   run: make install-dependencies # Assuming you have an 'install-dependencies' target in your Makefile
 
       - name: Run unit and acceptance test
         if: |
